--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,11 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.3.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.16.0</version>
+		</dependency>
 	</dependencies>
 </project>
