--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,15 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.16.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json-simple -->
+		<!--
+		https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+		</dependency>
+
+
 	</dependencies>
 </project>
