--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,12 @@
 			<artifactId>jfreechart</artifactId>
 			<version>1.5.5</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
+		<dependency>
+			<groupId>org.jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.5.5</version>
+		</dependency>
 
 	</dependencies>
 </project>
