--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.interactivebrokers</groupId>
+			<artifactId>tws-api</artifactId>
+			<version>9.73.01-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 			<version>2.3.2</version>
