--- a/pom.xml
+++ b/pom.xml
@@ -69,5 +69,13 @@
 			<version>1.5.5</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+
+
 	</dependencies>
 </project>
