--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 			<version>2.13.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.ta4j</groupId>
+			<artifactId>ta4j-core</artifactId>
+			<version>0.15</version>
+		</dependency>
 
 	</dependencies>
 </project>
