--- a/pom.xml
+++ b/pom.xml
@@ -82,5 +82,12 @@
 			<version>0.15</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>3.0.4</version>
+		</dependency>
+
 	</dependencies>
 </project>
