--- a/pom.xml
+++ b/pom.xml
@@ -89,5 +89,13 @@
 			<version>3.0.4</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
+		<!-- https://mvnrepository.com/artifact/com.sun.mail/jakarta.mail -->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>jakarta.mail</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+
 	</dependencies>
 </project>
