--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 		<main.class>com.rickauer.marketmonarch.MarketMonarch</main.class>
 	</properties>
+	
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>https://opensource.org/licenses/MIT</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<build>
 		<plugins>
